* filter/msword.pl (filter_doccat): Remove SJIS code path check.         All time use temporary file.
        * filter/excel.pl (filter_doccat): Likewise.

        * filter/powerpoint.pl (filter): Likewise.

        * filter/taro.pl (filter): Likewise.

        * filter/wordpro.pl (filter): Likewise.

        * filter/oasys.pl (filter): Likewise.

        * filter/ichitaro456.pl : Move to win32 directory.

        * filter/win32/ichitaro456.pl : Move from filter directory.

        * filter/Makefile.am (filter_DATA): Delete ichitaro456.pl.

        * filter/win32/Makefile.am (filter_DATA): Add ichitaro456.pl.

        * doc/ja/manual.html : Move ichitaro456.pl to Windows section.

        * doc/en/manual.html : Likewise.

--- a/filter/win32/Makefile.am
+++ b/filter/win32/Makefile.am
@@ -6,7 +6,8 @@ filterdir = $(pkgdatadir)/filter/win32
 
 filter_DATA = olemsword.pl \
 	     oleexcel.pl \
-	     olepowerpoint.pl
+	     olepowerpoint.pl \
+	     ichitaro456.pl
 
 EXTRA_DIST = $(filter_DATA)
 
