--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.65 2000-05-18 16:14:51 furukawa Exp $
+# $Id: mknmz.in,v 1.66 2000-06-15 14:11:29 furukawa Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -75,8 +75,8 @@ sub main {
 
     init();
     load_modules();
-    my ($output_dir, @targets) = parse_options();
     load_rcfiles();
+    my ($output_dir, @targets) = parse_options();
     my ($docid_base, $total_files_num) = prep($output_dir, @targets);
 
     my $swap = 1;
@@ -219,7 +219,6 @@ sub load_rcfiles () {
     my (@cand) = ();
     push @cand, "$CONFDIR/mknmzrc";
     push @cand, "$ENV{'HOME'}/.mknmzrc";
-    push @cand, $ConfigFile if defined $ConfigFile;
 
     util::vprint(_("Reading rcfile: "));
     for my $rcfile (@cand) {
@@ -1041,7 +1040,7 @@ sub parse_options
     }
 
     if ($opt_config) {
-	$ConfigFile = $opt_config;
+	load_rcfile($ConfigFile = $opt_config);
     }
 
     if ($opt_help) {
@@ -1055,7 +1054,6 @@ sub parse_options
     }
 
     if ($opt_show_config) {
-	load_rcfiles();
 	show_config();
 	exit 1;
     }
