--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.67 2000-07-06 05:39:57 knok Exp $
+# $Id: mknmz.in,v 1.68 2000-07-19 09:09:36 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1248,6 +1248,11 @@ sub find_target (@) {
     util::vprint(_("find_target starting: "). localtime($start). "\n");
     while (@targets) {
 	my $target = shift @targets;
+
+	if ($target eq '') {
+	    print STDERR "Warning: target contains empty line, skip it\n";
+	    next;
+	}
 	
 	if (-f $target) { # target is a file.
 	    add_target($target, \@flist, \%counts);
