--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.70 2000-08-08 04:25:38 knok Exp $
+# $Id: mknmz.in,v 1.71 2000-08-09 07:03:52 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -660,9 +660,11 @@ sub put_field_index (\%$) {
 	my $fh_field = util::efopen(">>$fname");
 	my $output = "";
 	if (defined($fields->{$key})) {
-	    $fields->{$key} =~ s/\s+/ /g;
-	    $fields->{$key} =~ s/\s+$//;
-	    $fields->{$key} =~ s/^\s+//;
+	    if ($key ne 'uri') { # workaround for namazu-bugs-ja#30
+		$fields->{$key} =~ s/\s+/ /g;
+		$fields->{$key} =~ s/\s+$//;
+		$fields->{$key} =~ s/^\s+//;
+	    }
 	    $output = $fields->{$key};
 
 	    # -1 means "LF"
