--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.71 2000-08-09 07:03:52 knok Exp $
+# $Id: mknmz.in,v 1.72 2000-08-10 07:05:24 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -2092,7 +2092,9 @@ sub write_phrase_hash_sub () {
 		print $fh_tmp_pi pack("N", $ptr);
 		my $record = $PhraseHash{$i};
 		my $last_docid = get_last_docid($baserecord, 1);
-		$record = adjust_first_docid($record, $last_docid);
+		my $adjrecord = adjust_first_docid($record, $last_docid);
+		check_records(\$record, \$baserecord, 1) unless defined $record; # namazu-bugs-ja#31
+		$record = $adjrecord;
 		my $n2 = length($record) + $baseleng;
 		my $data = pack("w", $n2) .  $baserecord . $record;
 		print $fh_tmp_p $data;
@@ -2265,6 +2267,7 @@ sub adjust_first_docid ($$) {
     my (@data) = unpack 'w*', $record;
 
     $data[0] = $data[0] - $last_docid;
+    return undef if ($data[0] < 0); # namazu-bug-ja#31
     $record = pack 'w*', @data;
     return $record;
 }
@@ -2303,7 +2306,9 @@ sub write_index_sub () {
 
 		if ($current_word eq $words[$cnt]) {
 		    my $last_docid = get_last_docid($baserecord, 2);
-		    $record = adjust_first_docid($record, $last_docid);
+		    my $adjrecord = adjust_first_docid($record, $last_docid);
+		    check_records(\$record, \$baserecord, 1) unless defined $record; # namazu-bugs-ja#31
+		    $record = $adjrecord;
 		    $leng = length($record);  # re-measure
 		    my $tmp = pack("w", $leng + $baseleng);
 
@@ -2387,6 +2392,28 @@ sub decide_type ($$) {
     }
 
     return $cont;
+}
+
+#
+# Debugging code for the "negative numbers" probrem.
+#
+sub check_records ($$$) {
+    my ($recref, $baserecref, $step) = @_;
+    dump_record($baserecref, $step);
+    dump_record($recref, $step);
+    print STDERR "The \x22negative number\x22 probrem occured.\n";
+    exit(1);
+}
+
+sub dump_record($$) {
+    my ($recref, $step) = @_;
+    my (@data) = unpack 'w*', $$recref;
+    print STDERR "dump record data (step: $step)...";
+    foreach (@data) {
+	print STDERR sprintf(" %08x", $_);
+    }
+    print STDERR "\n";
+    return;
 }
 
 #
