--- a/namazu.spec.in
+++ b/namazu.spec.in
@@ -3,7 +3,7 @@
 %define  rel     %{?CUSTOM_RELEASE} %{!?CUSTOM_RELEASE:%RELEASE}
 %define prefix	/usr
 %define sysconfdir	/etc
-%define localstatedir	/var
+%define localstatedir	/var/lib
 
 Summary: Namazu is a search engine intented for easy use
 Name: namazu
@@ -33,6 +33,9 @@ Requires: %name = %{PACKAGE_VERSION}
 Libraries and include files of Namazu.
 
 %changelog
+* Tue Aug 22 2000 Ryuji Abe <rug@namazu.org>
+- Fixed %localstatedir /var to /var/lib.
+
 * Tue Apr 25 2000 Ryuji Abe <rug@namazu.org>
 - Ignore %{prefix}/share/namazu/etc.
 
