* scripts/mknmz.in (dump_record): Changed to output NMZ.bug.info 	file instead STDERR.

--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.73 2000-08-21 01:59:15 knok Exp $
+# $Id: mknmz.in,v 1.74 2000-08-29 10:05:27 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -2408,11 +2408,13 @@ sub check_records ($$$) {
 sub dump_record($$) {
     my ($recref, $step) = @_;
     my (@data) = unpack 'w*', $$recref;
-    print STDERR "dump record data (step: $step)...";
+    print STDERR "dump record data to NMZ.bug.info (step: $step)...";
+    my $fh_info = util::ofopen(">> NMZ.bug.info");
+    print $fh_info "dumped record data (step: $step)...";
     foreach (@data) {
-	print STDERR sprintf(" %08x", $_);
+	print $fh_info sprintf(" %08x", $_);
     }
-    print STDERR "\n";
+    print $fh_info "\n";
     return;
 }
 
