Remove @INTLLIBS@ from libnmz_la_LIBADD.

--- a/nmz/Makefile.am
+++ b/nmz/Makefile.am
@@ -1,6 +1,6 @@
 # Process this file with automake to produce Makefile.in
 #
-# $Id: Makefile.am,v 1.33 2000-09-05 05:47:42 rug Exp $
+# $Id: Makefile.am,v 1.34 2000-10-03 03:42:16 rug Exp $
 #
 
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
@@ -32,7 +32,7 @@ libnmz_la_SOURCES = alias.c alias.h codeconv.c codeconv.h \
 	regex.c regex.h search.c search.h seed.c seed.h util.c util.h \
 	var.c var.h wakati.c wakati.h 
 
-libnmz_la_LIBADD = @INTLLIBS@ @NMZ_LIBOBJS@
+libnmz_la_LIBADD = @NMZ_LIBOBJS@
 libnmz_la_LDFLAGS = -version-info $(LTVERSION)
 
 ##Bug in automake: Can't use `if MAINTAINER_MODE'
