--- a/scripts/mailutime.in
+++ b/scripts/mailutime.in
@@ -3,7 +3,7 @@
 #
 # mailutime - a tool to unify a file time stamp with 
 #             RFC 822 'Date:' field in a mail.
-# $Id: mailutime.in,v 1.2 2000-01-04 23:40:12 satoru Exp $
+# $Id: mailutime.in,v 1.3 2000-12-04 06:40:04 shirai Exp $
 #
 # Version 1.0.2    [12/12/1998]
 #
@@ -96,14 +96,14 @@ sub rfc822time($) {
 
     if ($date =~ /
 	^\s*
-	\w{3},\s+                          # a day of the week (ignored)
+	(\w{3},\s+|)                       # a day of the week (ignored)
 	($re_day)\s+                       # a day of the month
 	($re_month)\s+                     # name of month
 	($re_year)\s+                      # year
 	($re_hour):($re_min):($re_sec)     # HH:MM:SS
 	/x) 
     {
-	my ($mday, $mon, $year, $hour, $min, $sec) = ($1, $2, $3, $4, $5, $6);
+	my ($mday, $mon, $year, $hour, $min, $sec) = ($2, $3, $4, $5, $6, $7);
 	$year += 2000 if $year < 50;
 	$year += 1900 if 50 <= $year && $year <= 99;
 	$mon = $month_names{$mon};
