* tests/data/{ja,en}/powerpoint97.ppt: Added test data. 	(Contributed by Teranishi)

--- a/tests/data/en/Makefile.am
+++ b/tests/data/en/Makefile.am
@@ -12,4 +12,5 @@ EXTRA_DIST  = acrobat3.pdf \
 	      plain.txt.gz \
 	      rfc0000.txt \
 	      tex.tex \
-	      word97.doc
+	      word97.doc \
+	      powerpoint97.ppt
