--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -31,6 +31,8 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.pdf" . 			   # PDF
 		"|.*\\.tex" .   		   # TeX
 		"|.*\\.doc|.*\\.xls" .		   # Word, Excel
+		"|.*\\.ppt" .	                   # PowerPoint
+		"|.*\\.tex" .   		   # TeX
 		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
